--- a/source/project.private.config.json
+++ b/source/project.private.config.json
@@ -1,30 +1,36 @@
 {
-  "setting": {},
-  "condition": {
-    "plugin": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": [
-        {
-          "name": "我的",
-          "pathName": "pages/my/my",
-          "query": "",
-          "scene": null
+    "setting": {},
+    "condition": {
+        "plugin": {
+            "list": []
         },
-        {
-          "name": "商城",
-          "pathName": "pages/mall/mall",
-          "query": "",
-          "scene": null
+        "game": {
+            "list": []
+        },
+        "gamePlugin": {
+            "list": []
+        },
+        "miniprogram": {
+            "list": [
+                {
+                    "name": "我的",
+                    "pathName": "pages/my/my",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "商城",
+                    "pathName": "pages/mall/mall",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "在线视频",
+                    "pathName": "pages/videolist/videolist",
+                    "query": "",
+                    "scene": null
+                }
+            ]
         }
-      ]
     }
-  }
 }
