--- a/source/project.config.json
+++ b/source/project.config.json
@@ -5,31 +5,41 @@
     },
     "setting": {
         "urlCheck": true,
-        "scopeDataCheck": false,
-        "coverView": true,
         "es6": false,
+        "enhance": true,
         "postcss": true,
-        "compileHotReLoad": false,
-        "lazyloadPlaceholderEnable": false,
         "preloadBackgroundData": false,
         "minified": true,
-        "autoAudits": false,
         "newFeature": false,
-        "uglifyFileName": false,
-        "uploadWithSourceMap": true,
-        "useIsolateContext": true,
+        "coverView": true,
         "nodeModules": false,
-        "enhance": true,
-        "useMultiFrameRuntime": true,
-        "useApiHook": true,
-        "useApiHostProcess": true,
+        "autoAudits": false,
         "showShadowRootInWxmlPanel": true,
+        "scopeDataCheck": false,
+        "uglifyFileName": false,
+        "checkInvalidKey": true,
+        "checkSiteMap": true,
+        "uploadWithSourceMap": true,
+        "compileHotReLoad": false,
+        "useMultiFrameRuntime": false,
+        "useApiHook": true,
+        "babelSetting": {
+            "ignore": [],
+            "disablePlugins": [],
+            "outputPath": ""
+        },
+        "enableEngineNative": false,
+        "bundle": false,
+        "useIsolateContext": true,
+        "useCompilerModule": true,
+        "userConfirmedUseCompilerModuleSwitch": false,
+        "userConfirmedBundleSwitch": false,
         "packNpmManually": false,
         "packNpmRelationList": [],
         "minifyWXSS": true
     },
     "compileType": "miniprogram",
-    "libVersion": "2.19.4",
+    "libVersion": "2.21.2",
     "appid": "wx802dd365b55b23a6",
     "projectname": "%E7%A2%97%E9%87%8C%E5%B0%8F%E9%93%BA",
     "debugOptions": {
@@ -39,17 +49,13 @@
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
     "condition": {
-        "search": {
-            "list": []
-        },
-        "conversation": {
-            "list": []
-        },
         "plugin": {
             "list": []
         },
         "game": {
-            "currentL": -1,
+            "list": []
+        },
+        "gamePlugin": {
             "list": []
         },
         "miniprogram": {
@@ -65,6 +71,12 @@
                     "id": -1,
                     "name": "name",
                     "pathName": "pages/name/name",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "在线视频",
+                    "pathName": "pages/videolist/videolist",
                     "scene": null
                 }
             ]
