--- a/source/project.private.config.json
+++ b/source/project.private.config.json
@@ -40,16 +40,23 @@
                 {
                     "name": "品牌活动",
                     "pathName": "pages/activity/activity",
-                    "query": "",
-                    "launchMode": "default",
-                    "scene": null
+                    "query": "id=1",
+                    "scene": null,
+                    "launchMode": "default"
                 },
                 {
                     "name": "积分商城",
                     "pathName": "pages/integralmall/integralmall",
                     "query": "",
-                    "scene": null,
-                    "launchMode": "default"
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "",
+                    "pathName": "pages/activitylist/activitylist",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
                 }
             ]
         }
