--- a/source/project.private.config.json
+++ b/source/project.private.config.json
@@ -41,8 +41,8 @@
                     "name": "品牌活动",
                     "pathName": "pages/activity/activity",
                     "query": "id=1",
-                    "scene": null,
-                    "launchMode": "default"
+                    "launchMode": "default",
+                    "scene": null
                 },
                 {
                     "name": "积分商城",
@@ -57,6 +57,20 @@
                     "query": "",
                     "launchMode": "default",
                     "scene": null
+                },
+                {
+                    "name": "",
+                    "pathName": "pages/activitysuccess/activitysuccess",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "",
+                    "pathName": "pages/myactivity/myactivity",
+                    "query": "",
+                    "scene": null,
+                    "launchMode": "default"
                 }
             ]
         }
