--- a/source/project.private.config.json
+++ b/source/project.private.config.json
@@ -118,8 +118,8 @@
                     "name": "",
                     "pathName": "pages/buygiftcardsinfo/buygiftcardsinfo",
                     "query": "id=1",
-                    "scene": null,
-                    "launchMode": "default"
+                    "launchMode": "default",
+                    "scene": null
                 },
                 {
                     "name": "",
@@ -134,6 +134,13 @@
                     "query": "",
                     "launchMode": "default",
                     "scene": null
+                },
+                {
+                    "name": "",
+                    "pathName": "pages/myactivity/myactivity",
+                    "query": "",
+                    "scene": null,
+                    "launchMode": "default"
                 }
             ]
         }
