--- a/source/app.json
+++ b/source/app.json
@@ -38,7 +38,8 @@
     "pages/conponuse/conponuse",
     "pages/myshouyi/myshouyi",
     "pages/shouyimingxi/shouyimingxi",
-    "pages/shouyitixian/shouyitixian"
+    "pages/shouyitixian/shouyitixian",
+    "pages/tixiansuccess/tixiansuccess"
 
   ],
   "permission": {
